--- a/README
+++ b/README
@@ -4,5 +4,6 @@ On the code, define the pins where you put the led and the button as shown:
 led = 17
 button = 2
 This means that the led is set in the GPIO17 and the button is set in the GPIO2.
+The pinout for the Raspberry Pi can be found here (we do not own that link): http://www.megaleecher.net/sites/default/files/images/raspberry-pi-rev2-gpio-pinout.jpg
 
 The code is designed for the Raspberry Pi and has not been tested on newer models.
